<resources>
    <string name="app_name">whatsapp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="chat">chat</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="or_login_using_your">or Login using your</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="hey_i_am_online_now">hey, i am Online now</string>
    <string name="update">Update</string>
    <string name="username">username</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="write_your_message_here">write your message here</string>
    <string name="write_phone_number_here">Write phone Number here</string>
    <string name="write_verification_code_here">Write verification code here</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="user">user</string>
    <string name="user_status">user status</string>
    <string name="user_profile_name">user profile name</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="send_message">Send Message</string>
    <string name="hey_i_m_using_coding_cafe_chat_app">hey i\'m using Coding Cafe chat App.</string>
    <string name="user_name">user name</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="display_username">Display UserName</string>
    <string name="last_seen">Last Seen</string>
    <string name="type_message_here">type message here...</string>
    <string name="receiver_messages_here">receiver messages here</string>
    <string name="sender_messages">sender messages</string>
    <string name="state">state</string>
    <string name="phone">Phone</string>
</resources>
