<?xml version="1.0" encoding="utf-8"?>
<!-- toolbar for chatActivity       -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/custom_profile_image"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/profile_image"
        android:cropToPadding="true"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/custom_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/display_username"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:textSize="18sp"
        />


    <TextView
        android:id="@+id/custom_user_last_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_profile_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:text="@string/last_seen"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/custom_user_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_user_last_seen"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:text="@string/state"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:textSize="10sp"
        />


</RelativeLayout>