<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar"

        />

   <LinearLayout
       android:id="@+id/phone_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/inputs"
        android:padding="5dp"
        android:hint="@string/write_phone_number_here"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:drawableStart="@drawable/phone"
        android:textAlignment="center"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/inputs"
        android:padding="5dp"
        android:hint="@string/write_verification_code_here"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:drawableStart="@drawable/password"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <Button

        android:id="@+id/send_ver_code_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/send_verification_code"
        android:textAllCaps="false"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textStyle="bold"

        />

    <Button

        android:id="@+id/verify_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"

        />


</LinearLayout>


</RelativeLayout>