<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"

    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"

        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/login_scroll"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_page_layout"
             >

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-3dp"
                android:layout_marginTop="53dp"
                android:scaleType="fitCenter"
                android:src="@drawable/login_photo" />

            <EditText
                android:id="@+id/login_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"

                />


            <EditText
                android:id="@+id/login_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"

                />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:text="@string/forget_password"
                android:padding="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"

                />

            <TextView
                android:id="@+id/create_new_account_link"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:text="@string/create_new_account"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/login_using"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/create_new_account_link"
                android:text="@string/or_login_using_your"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_using"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/phone"
                />



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>