<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id = "@+id/settings_toolbar"
        >

    </include>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/profile_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        android:layout_marginTop="90dp"

        />

    <EditText
        android:id="@+id/set_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/set_profile_image"
        android:inputType="textMultiLine"
        android:hint="@string/username"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_profile"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/set_user_name"
        android:inputType="textMultiLine"
        android:hint="@string/hey_i_am_online_now"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_status"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"

        />

    <Button
        android:id="@+id/update_settings_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/set_profile_status"
        android:textAlignment="center"
        android:text="@string/update"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20sp"

        />
</RelativeLayout>